# mempalace-rs

./: .gitignore  Cargo.toml  Justfile  README.md  entities.json
.agents/rules/: docs.md
.agents/skills/adversarial-reviewer/: SKILL.md
.agents/skills/mempalace-memory-retrieval/: SKILL.md
.agents/skills/skill-creator/: SKILL.md
.agents/skills/strategic-problem-solving/: SKILL.md
.agents/skills/strategic-problem-solving/references/: origins.md
.agents/workflows/: brainstorming.md
.github/workflows/: build.yml
benches/: retrieval_benchmark.rs
benchmarks/: latest_comparison.json
fixtures/: benchmark_cases.json
src/: benchmark.rs  config.rs  error.rs  layers.rs  lib.rs  logger.rs  main.rs  tokenizer.rs
src/commands/: benchmark.rs  compress.rs  init.rs  mine.rs  mod.rs  repair.rs  search.rs  serve.rs  split.rs  status.rs  wakeup.rs
src/dialect/: aaak.rs  mod.rs
src/extract/: entity.rs  general.rs  mod.rs  room.rs
src/graph/: knowledge.rs  mod.rs  palace_graph.rs
src/mcp/: mod.rs  server.rs
src/mcp/tools/: catalog.rs  diary.rs  drawers.rs  graph.rs  knowledge_graph.rs  mod.rs  protocol.rs  search.rs
src/miner/: convo_miner.rs  file_miner.rs  mod.rs  splitter.rs
src/normalize/: mod.rs  parser.rs
src/palace/: drawer.rs  mod.rs  room.rs  wing.rs
src/registry/: entity_registry.rs  mod.rs
src/search/: mod.rs  retrieval.rs  semantic.rs
src/storage/: chroma.rs  lancedb.rs  mod.rs  sqlite_kg.rs
src/tests/: benchmark.rs  commands_benchmark.rs  config.rs  dialect_aaak.rs  extract_entity.rs  extract_general.rs  extract_room.rs  graph_knowledge.rs  graph_palace_graph.rs  layers.rs  mcp_tool_handlers.rs  mcp_tools.rs  miner_convo_miner.rs  miner_file_miner.rs  miner_splitter.rs  normalize_parser.rs  palace_drawer.rs  palace_room.rs  palace_wing.rs  registry_entity_registry.rs  search_retrieval.rs  search_semantic.rs  storage_lancedb.rs  storage_sqlite_kg.rs  tokenizer.rs  wing_name.rs
test/: search.sqlite
