[package]
name = "mempalace"
version = "3.0.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# SQLite for knowledge graph and FTS5
rusqlite = { version = "0.39", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime (for HTTP calls and LanceDB)
tokio = { version = "1.0", features = ["full"] }

# HTTP client (for Wikipedia API in entity_registry)
reqwest = { version = "0.13", features = ["json"] }

# URL encoding (for Wikipedia API)
urlencoding = "2"

# File watching
notify = "8.2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Hashing (for drawer IDs)
sha2 = "0.11"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Config management
directories = "6"

# Error handling
thiserror = "2"
anyhow = "1"

# Regex (for entity detection, AAAK dialect, general extraction)
regex = "1.10"

# Directory walking (for room detection)
ignore = "0.4"

[dev-dependencies]
tempfile = "3.10"
