[package]
name = "mempalace"
version = "3.0.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# SQLite for knowledge graph and FTS5
rusqlite = { version = "0.39", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime (for HTTP calls)
tokio = { version = "1", features = ["rt-multi-thread"] }

# HTTP client (for Wikipedia API in entity_registry)
reqwest = { version = "0.13", features = ["json"] }

# URL encoding (for Wikipedia API)
urlencoding = "2"

# File watching
notify = "8.2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Hashing (for drawer IDs)
sha2 = "0.11"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

# Config management
directories = "6"

# Error handling
thiserror = "2"
anyhow = "1"

# Regex (for entity detection, AAAK dialect, general extraction)
regex = "1.10"

# MCP Server (official SDK)
rmcp = { version = "1.3", features = ["server", "transport-io", "schemars"] }
schemars = "1"

# Directory walking (for room detection)
ignore = "0.4"


[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
futures = "0.3"
tempfile = "3.10"

[[bench]]
name = "retrieval_benchmark"
harness = false
required-features = ["bench"]

[features]
default = []
bench = []
